<resources>
    <string name="app_name">donateProject</string>
    <string name="title_projets">Projets</string>
    <string name="title_detail">Détail</string>
    <string name="title_profil">Profil</string>
    <string name="title_add_project">Ajout d\'un projet</string>
    <string name="description">Description</string>
    <string name="_0">0%</string>
    <string name="titre">Titre</string>
    <string name="date_limit">Date limite</string>
    <string name="goal">Objectif</string>
    <string name="textview">TextView</string>
</resources>