<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.dashboard.DashboardFragment">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="216dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="281dp"
        android:layout_height="35dp"
        android:layout_marginEnd="11dp"
        android:gravity="center"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteY="132dp" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="6dp"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagetest"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/percentageTextView2"
        android:layout_width="282dp"
        android:layout_height="18dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="119dp" />

    <ImageView
        android:id="@+id/imagetest"
        android:layout_width="104dp"
        android:layout_height="187dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="6dp"
        android:background="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/progressBar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="9dp"
        android:text="@string/titre"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nbContributeurs"
        android:layout_width="282dp"
        android:layout_height="28dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="85dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/percentageTextView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="119dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="11dp"
        android:text="CONTRIBUER"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>